name:               xmonad
version:            0.10.1
homepage:           http://xmonad.org
bug-reports:        http://code.google.com/p/xmonad/issues/list
synopsis:           A tiling window manager
description:
    xmonad is a tiling window manager for X. Windows are arranged
    automatically to tile the screen without gaps or overlap, maximising
    screen use. All features of the window manager are accessible from
    the keyboard: a mouse is strictly optional. xmonad is written and
    extensible in Haskell. Custom layout algorithms, and other
    extensions, may be written by the user in config files. Layouts are
    applied dynamically, and different layouts may be used on each
    workspace. Xinerama is fully supported, allowing windows to be tiled
    on several screens.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Spencer Janssen
maintainer:         xmonad@haskell.org
extra-source-files: README TODO CONFIG STYLE tests/loc.hs tests/Properties.hs
                    man/xmonad.1.markdown man/xmonad.1 man/xmonad.1.html
                    util/GenerateManpage.hs
cabal-version:      >= 1.8
build-type:         Simple

data-files:         man/xmonad.hs

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/cabal/

-- We don't use the splitBase any more, as we depend on X11 == 1.5.*, which only
-- accepts base 3.* or 4.*.
--flag splitBase
--    description: Choose the new smaller, split-up base package.
--    default: True

flag testing
    description: Testing mode, only build minimal components
    default: False

library
    exposed-modules:    XMonad
                        XMonad.Main
                        XMonad.Log
                        XMonad.Core
                        XMonad.Config
                        XMonad.Layout
                        XMonad.ManageHook
                        XMonad.Operations
                        XMonad.StackSet

    build-depends:      base == 3.* || == 4.*
                      , containers
                      , directory
                      , process
                      , filepath
                      , extensible-exceptions
                      , X11 == 1.5.* || == 1.6.*
                      , mtl
                      , unix
                      , utf8-string == 0.3.*
                      , hslogger == 1.*

    -- Note: "if true" works around a cabal bug with order of flag composition.
    if true
        ghc-options:    -funbox-strict-fields -Wall -fwarn-tabs

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all

    extensions:         CPP

    if flag(testing)
        buildable: False


executable xmonad
    main-is:            Main.hs
    other-modules:      XMonad
                        XMonad.Main
                        XMonad.Log
                        XMonad.Core
                        XMonad.Config
                        XMonad.Layout
                        XMonad.ManageHook
                        XMonad.Operations
                        XMonad.StackSet

    build-depends:      base == 3.* || == 4.*
                      , containers
                      , directory
                      , process
                      , filepath
                      , extensible-exceptions
                      , X11 == 1.5.* || == 1.6.*
                      , mtl
                      , unix
                      , random
                      , utf8-string == 0.3.*
                      , hslogger == 1.*

    -- Note: "if true" works around a cabal bug with order of flag composition.
    if true
        ghc-options:    -funbox-strict-fields -Wall  -fwarn-tabs

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all

    extensions:         CPP

    -- If we are configuring with testing enabled, then compile the testing
    -- code into the main XMonad executable, such that we can run it with
    -- "--run-tests"
    if flag(testing)
          cpp-options:    -DTESTING
          hs-source-dirs: . tests/
          build-depends:  QuickCheck == 2.4.*
          ghc-options:    -Werror


-- Old stuff remove when test suite is fixed
-- test-suite xmonad-test
--     type:            exitcode-stdio-1.0

--     hs-source-dirs:  tests

-- --    main-is:         Properties.hs
--     main-is:         Foo.hs
--     buildtools:      ghc

--     -- build-depends:      base == 3.* || == 4.*
--     --                   , containers
--     --                   , directory
--     --                   , process
--     --                   , filepath
--     --                   , extensible-exceptions
--     --                   , X11 == 1.5.*
--     --                   , mtl
--     --                   , unix
--     --                   , random
--     --                   , utf8-string == 0.3.*
--     --                   , hslogger == 1.*
--     --                   , QuickCheck == 2.4.*
--     --                   , xmonad

--    build-depends:   base >= 4.0 && < 5,
--                     test-framework >= 0.3.3 && < 0.5,
--                     test-framework-quickcheck2 >= 0.2.9 && < 0.3,
--                     QuickCheck == 2.4.*
